Bug Fix - SoSOL Metadata Editor: DCLP drop down menu opens behind Janrain login panel (issue 194)

--- a/public/stylesheets/sass/editor.sass
+++ b/public/stylesheets/sass/editor.sass
@@ -675,6 +675,7 @@ div.nav
   //position: relative  
   //left: 0px;
   top: auto
+  z-index: 103
   
   
 div.editor_nav
